fix overlaping user-info/email on smaller height screen left-navbar

--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -7,6 +7,7 @@
   border-radius: 8px;
   padding: 0px;
   max-width: 600px;
+  min-width: 390px;
   width: 100%;
   height: 660px;
   overflow: auto;
