--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,6 +9,8 @@
   padding: 0;
   box-sizing: border-box;
   min-height: 100vh;
+  min-width: 300px;
+  width: 100%;
 }
 
 .container {
