--- a/src/compontents/Sidebar.module.css
+++ b/src/compontents/Sidebar.module.css
@@ -89,13 +89,16 @@
 
 .user_info {
   font-size: 20px;
-  position: fixed;
+  /* position: fixed; */
+  margin-top: 80px;
+  padding-left: 15px;
   bottom: 20px;
   height: 120px;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
-  justify-items: center;
+  justify-items: flex-end;
   align-items: center;
+  align-self: flex-end;
 }
 
 .button_logout {
@@ -190,6 +193,8 @@
     margin-right: 24px;
   }
   .button_logout {
+    position: relative;
+    left: 30px;
     height: 40px;
     width: 74px;
     font-size: 0.8rem;
